<resources>
    <string name="app_name">BookKeeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Book Keeper</string>
    <string name="nav_header_subtitle">yunitski</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="events">События</string>
    <string name="exchange">Курс валют</string>
    <string name="stat">Статистика</string>
    <string name="ruble">₽</string>
    <string name="euro">€</string>
    <string name="dollar">$</string>
</resources>