<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.yunitski.myapplication.HomeFragment"
        android:label="@string/events"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.yunitski.myapplication.ExchangeFragment"
        android:label="@string/exchange"
        tools:layout="@layout/fragment_exchange" />

    <fragment
        android:id="@+id/nav_stat"
        android:name="com.yunitski.myapplication.StatisticFragment"
        android:label="@string/stat"
        tools:layout="@layout/fragment_statistic" />
</navigation>